docs(template): document JDK 23+ Netty warnings; bake in --enable-native-access
Add a "Java 23+ startup warnings" section to the scaffold README covering
the sun.misc.Unsafe deprecation warning emitted by Netty 4.1.x (pinned via
the Datomic peer). Documents two remedies with concrete deps.edn / bin/db
examples: the --sun-misc-unsafe-memory-access=allow flag (JDK 23+ only, not
baked in since it fails to start on 17/21), and the real fix via a future
Netty 4.2.x bump (wire upgrade for non-Datomic projects; Datomic waits on a
peer bump).

Bake --enable-native-access=ALL-UNNAMED into the :run/:server aliases and
the Datomic bin/db (preserving the transactor's GC defaults via JAVA_OPTS).
Valid on JDK 17+, so it silences the restricted-native-access warning with
no consumer action and no floor bump.

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>